--- a/app.json
+++ b/app.json
@@ -24,6 +24,20 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+       [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(Wallet) to access your camera",
+          "microphonePermission": "Allow $(Wallet) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ],
+      [
+      "expo-image-picker",
+      {
+        "cameraPermission": "Allow the app to use your camera."
+      }
+    ],
       "expo-router",
       [
         "expo-splash-screen",
