--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-navigation-shared-element": "^3.1.3",
+    "expo-sensors": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
