--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.4",
     "expo-sensors": "~14.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -53,8 +54,7 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "react-navigation-shared-element": "^3.1.3",
-    "expo-sharing": "~13.1.5"
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
