--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.5",
-    "@somesoap/react-native-image-palette": "^1.2.1",
     "expo": "~53.0.20",
-    "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
     "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
@@ -32,29 +30,24 @@
     "expo-linking": "~7.1.7",
     "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.4",
-    "expo-sensors": "~14.1.4",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-updates": "^0.28.17",
     "expo-web-browser": "~14.2.0",
-    "moti": "^0.30.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-image-colors": "^2.5.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "^6.8.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-text-recognition": "^1.0.2",
-    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
