--- a/app.json
+++ b/app.json
@@ -18,8 +18,7 @@
       },
       "edgeToEdgeEnabled": true,
       "permissions": [
-        "android.permission.CAMERA",
-        "android.permission.RECORD_AUDIO"
+        "android.permission.CAMERA"
       ],
       "package": "com.sahilbakoru.CardWallet"
     },
